# ChangeLog for app-text/recode
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/recode/ChangeLog,v 1.82 2010/06/24 08:14:08 jlec Exp $

*recode-3.6_p17-r2 (24 Jun 2010)

  24 Jun 2010; Justin Lecher <jlec@gentoo.org> -recode-3.6_p17-r1.ebuild,
  +recode-3.6_p17-r2.ebuild:
  Dropped ppc-macos-new.diff for all non prefix arches, #324519

*recode-3.6_p17-r1 (15 Jun 2010)

  15 Jun 2010; Justin Lecher <jlec@gentoo.org> +recode-3.6_p17-r1.ebuild,
  +files/recode-3.6-interix-getopt.patch,
  +files/recode-3.6-ppc-macos-new.diff:
  QA, imported prefix changes

  21 May 2010; Peter Volkov <pva@gentoo.org> recode-3.6_p16.ebuild:
  amd64 stable, bug 307889, thank Matti Bickel for help.

  12 May 2010; Brent Baude <ranger@gentoo.org> recode-3.6_p16.ebuild:
  stable ppc64, bug 307889

  11 May 2010; Justin Lecher <jlec@gentoo.org> recode-3.6_p16.ebuild,
  recode-3.6_p17.ebuild:
  Added sys-devel/flex in DEPEND, #221369

  31 Mar 2010; Raúl Porcel <armin76@gentoo.org> recode-3.6_p16.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #307889

*recode-3.6_p17 (27 Mar 2010)

  27 Mar 2010; Justin Lecher (jlec) <jlec@gentoo.org>
  +recode-3.6_p17.ebuild:
  Version Bump per 311327


  24 Mar 2010; Jeroen Roovers <jer@gentoo.org> recode-3.6_p16.ebuild:
  Stable for HPPA (bug #307889).

  15 Mar 2010; nixnut <nixnut@gentoo.org> recode-3.6_p16.ebuild:
  ppc stable #307889

  06 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  recode-3.6_p16.ebuild:
  x86 stable wrt bug #307889

*recode-3.6_p16 (18 Oct 2009)

  18 Oct 2009; Mike Frysinger <vapier@gentoo.org> +recode-3.6_p16.ebuild,
  +files/recode-3.6-as-if.patch:
  Version bump and include fix for autoconf-2.64 troubles #283029 by Diego
  E. Pettenò.

  31 Aug 2009; Brent Baude <ranger@gentoo.org> recode-3.6_p15-r1.ebuild:
  stable ppc64, bug 279935

  26 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  recode-3.6_p15-r1.ebuild:
  stable x86, bug 279935
