@@ -1,6 +1,10 @@
 # ChangeLog for app-text/recode
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/recode/ChangeLog,v 1.82 2010/06/24 08:14:08 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/recode/ChangeLog,v 1.83 2010/10/08 21:28:18 darkside Exp $
+
+  08 Oct 2010; Jeremy Olexa <darkside@gentoo.org> -recode-3.6_p15-r1.ebuild,
+  -recode-3.6_p17.ebuild:
+  remove old
 
 *recode-3.6_p17-r2 (24 Jun 2010)
 
